improve/fix sample